Added TURN server for cross-network WebRTC

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <p>Share your screen and enjoy movies online.</p>
 
     <div id="room-section">
-    <video id="video" autoplay playsinline style="width: 600px; margin-top:20px; border-radius:10px;"></video>
+    <video id="localVideo" autoplay muted playsinline></video>
+    <video id="remoteVideo" autoplay playsinline></video>
     <button id="createBtn">Create Room</button>
     
     <br><br>
